--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
@@ -19,6 +20,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
+    "react-awesome-reveal": "^4.2.10",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.4",
