--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "react-awesome-reveal": "^4.2.10",
-    "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0",
     "react-simple-typewriter": "^5.0.1",
