--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@tanstack/react-query": "^5.36.0",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
